@@ -17,14 +17,7 @@ dt.target { font-weight: bold }
 <p>Status of GCJ as of GCC 3.2.  Improvements that are only
 in current development versions are marked as "in CVS".</p>
 
-<table id="features" border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
- Core Features
- </th>
-</tr>
-</table>
-<br />
+<h2 id="features">Core Features</h2>
 
 <ul>
 <li>Compile Java source code ("ahead-of-time") to native (machine) code,</li>
@@ -43,14 +36,8 @@ you should not (yet) rely on their correctness for security.</li>
 <li>An extensive class library - see below.</li>
 </ul>
 
-<table id="packages" border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
- Implemented Packages
- </th>
-</tr>
-</table>
 
+<h2 id="packages">Implemented Packages</h2>
 
 <p>You can also see <a href="http://www.kaffe.org/~stuart/japi/">a
 comparison of libgcj with the JDK</a>.  This is updated nightly.  It
@@ -118,13 +105,8 @@ merged from time to time.  You can also see
 a comparison of the GUI branch with Classpath</a>.
 </p>
 
-<table id="targets" border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
- Supported Targets
- </th>
-</tr>
-</table>
+
+<h2 id="targets">Supported Targets</h2>
 
 <dl>
 <dt class="target">GNU/Linux on the Pentium-compatible PCs
