@@ -1,3 +1,7 @@
+2011-11-01  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* status.html: Use <h2> instead of fake tables.
+
 2011-10-29  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* build-snapshot.html: Adjust title to not refer to CVS any more.
